# BitDubber

./: .editorconfig  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  app.ipynb  app.py  pyproject.toml  pytest.ini  setup.md  setup.py
.github/workflows/: ci.yml  demo-simulation.yml  unit-tests.yml
backup/v0/: README.md  app.py
backup/v1/: README.md  app.py
bitdubber/: __init__.py  app.py
docs/: README.md  USAGE.md
src/bitdubber/: __init__.py  __main__.py  cli.py
src/bitdubber/config/: __init__.py  settings.py
src/bitdubber/core/: __init__.py  action_executor.py  screen_reader.py  voice_recognizer.py
src/bitdubber/utils/: __init__.py  exceptions.py  logger.py
tests/: __init__.py  conftest.py  test_action_executor.py  test_app.py  test_automation.py  test_config.py  test_exceptions.py  test_screen_reader.py  test_voice_recognizer.py  test_watson.py
tools/: ibm-sample-stt.py  ibm-sample-tts.py
